vlib/v/checker/tests/unknown_array_element_type_a.out
vlib/v/checker/tests/unknown_array_element_type_a.v:2:9: error: unknown type `abc`
    1 | fn main() {
    2 |     a := []abc{}
      |            ~~~
    3 |     println(a)
    4 | }
